--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ gspread-pandas == 2.3.0
 google-auth == 1.24.0
 google-auth-oauthlib == 0.4.2
 google-pasta == 0.2.0
-libprotobuf == 3.13.0.1
+libprotobuf 
 protobuf == 3.13.0.1
 ssl
